# corpus-lens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
corpuslens/: __init__.py  cli.py  guard.py  model.py  render.py
corpuslens/analyze/: __init__.py  composition.py  steering.py
corpuslens/ingest/: __init__.py  _rows.py  claude_code.py  cursor.py  injection.py  postgres.py  sqlite.py
examples/: EXAMPLE.md
examples/sample-corpus/: api-project.jsonl  dashboard-project.jsonl  parser-project.jsonl
tests/: test_db_adapters.py  test_pipeline.py  test_wall.py
